# static-pubkey

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  build.yml
src/: lib.rs
tests/: Cargo.toml  pubkey_test.rs
tests/src/: lib.rs
