[workspace]
exclude = [
    "tests"
]

[package]
name = "static-pubkey"
version = "1.0.3"
edition = "2018"
description = " macro used for compile-time parsing of public key strings into byte arrays for near 0-cost static public keys"
repository = "https://github.com/sol-farm/static-pubkey"
readme = "./README.md"
license = "MIT"
keywords = ["solana", "macro"]

[lib]
proc-macro = true

[dependencies]
bs58 = "0.4.0"
proc-macro2 = "1"
quote = "1"
syn = {version = "1", features = ["full"]}